# big_word

./: .gitignore  Cargo.toml
src/: character.rs  lib.rs  word_vectors.rs
src/instant_distance/: mod.rs  types.rs
