[package]
name = "big_word"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arrayvec = { version = "0.7.6", features = ["serde"] }
ciborium = "0.2.2"
clap = { version = "4.6.0", features = ["derive"] }
memmap2 = "0.9.10"
num-derive = "0.4.2"
num-traits = "0.2.19"
prime_bag = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"

serde_repr = "0.1.20"
serde_yaml = "0.9.34"
strum = { version = "0.28.0", features = ["derive"] }

unicode-normalization = "0.1.25"
unicode-segmentation = "1.13.2"
ustr = { version = "1.1.0", features = ["serde"] }


[dev-dependencies]
test-case = "3.3.1"

[[bin]]
name = "generator"
test = false
bench = false
