[package]
name = "big_word"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {version = "1.0.102", optional = true}
ciborium = {version = "0.2.2", optional = true}
clap = { version = "4.6.0", features = ["derive"] , optional = true }
memmap2 = {version = "0.9.10", optional = true}
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde-big-array = "0.5.1"
serde_bytes = "0.11.19"
serde_repr = "0.1.20"
serde_yaml = {version = "0.9.34", optional = true}
strum = { version = "0.28.0", features = ["derive"] }

ustr = { version = "1.1.0", features = ["serde"] }


[dev-dependencies]
test-case = "3.3.1"

[features]
generator = ["dep:anyhow", "dep:ciborium", "dep:clap", "dep:memmap2", "dep:serde_yaml" ]

[[bin]]
name = "generator"
test = false
bench = false
required-features = ["generator"]
