[package]
name = "big_word"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {version = "1.0.102", optional = true}
ciborium = {version = "0.2.2", optional = true, features = ["std"]}
clap = { version = "4.6.0", features = ["derive"] , optional = true }
itertools = {version = "0.14.0", optional = true}
memmap2 = {version = "0.9.10", optional = true}
ordered-float = "5.3.0"
rand = {version =  "0.8.6", features = ["small_rng"]}
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde-big-array = "0.5.1"
serde_bytes = "0.11.19"
serde_repr = "0.1.20"
serde_yaml = {version = "0.9.34", optional = true}
strum = { version = "0.28.0", features = ["derive"] }

ustr = { version = "1.1.0", features = ["serde"] }


[dev-dependencies]
test-case = "3.3.1"

[features]
generator = ["dep:anyhow", "dep:ciborium", "dep:clap", "dep:memmap2", "dep:serde_yaml", "dep:itertools" ]

[[bin]]
name = "generator"
test = false
bench = false
required-features = ["generator"]
